<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemSettings"
        android:title="@string/addMovie"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/addMovieByInternet"
                android:title="@string/addMovieByInternet" />
            <item
                android:id="@+id/addMovieManually"
                android:title="@string/addMovieManually" />
        </menu>
    </item>
    <item
        android:id="@+id/groupColors"
        android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/exit"
                android:title="@string/exit" />

            <item
                android:id="@+id/deleteAll"
                android:title="@string/deleteAll" />
        </menu>

    </item>
</menu>