<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elio.movies.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="screen">

        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/title"
                android:gravity="center"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <EditText
                    android:id="@+id/descrition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:paddingBottom="@dimen/paddingBottom"
                    android:textSize="@dimen/textSize"/>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/url"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/url"
                    android:inputType="textPersonName"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/show"
                    android:onClick="onShowClick"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickOk"
                    android:text="@string/ok"/>

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickCancel"
                    android:text="@string/cancel"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>